@@ -6,6 +6,8 @@ Revision history for Perl module Prima
  - Widget.onMouseClick.dblclick::bool is .nth::int now, can report triple, quadruple etc clicks
  - Support fillPattern with tiles in the emulated antialiasing
  - Add Date and Time widgets (and their example/clock.pl)
+ - Remove native Win32 support from cygwin builds
+ - File.onRead supports native Win32 console stdin event
 
 1.67 2022-11-27
  - Links and tooltips extended functionality:
